INCLUDE(Kinski_Helpers)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

OPTION (BUILD_APPLIB "Build App framework" ON)
OPTION (BUILD_SAMPLES "Build Samples" ON)

ADD_SUBDIRECTORY("core")
SET(LIBS ${LIBS} "core")

##### GLM
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/blocks/glm/include")

ADD_SUBDIRECTORY("gl")
INCLUDE_DIRECTORIES("gl")
SET(LIBS ${LIBS} "gl")

if(NOT (BUILD_IOS OR KINSKI_RASPI))
ADD_SUBDIRECTORY("AntTweakBar")
INCLUDE_DIRECTORIES("AntTweakBar")
SET(LIBS ${LIBS} "AntTweakBar")
endif()

if(BUILD_APPLIB)
ADD_SUBDIRECTORY("app")
SET(LIBS ${LIBS} "app")
endif(BUILD_APPLIB)

ADD_SUBDIRECTORY("cv")
#SET(LIBS ${LIBS} "cv")

if(BUILD_SAMPLES)
    if(KINSKI_RASPI)
    ADD_SUBDIRECTORY("samples_raspi")
    else()
    ADD_SUBDIRECTORY("samples")
    ADD_SUBDIRECTORY("production")
    endif(KINSKI_RASPI)
endif(BUILD_SAMPLES)

