if(APPLE)
  find_library(CoreMIDI NAMES CoreMIDI)
  find_library(CoreFoundation NAMES CoreFoundation)
  find_library(CoreAudio NAMES CoreAudio)
  add_definitions(-D__MACOSX_CORE__ PARENT_SCOPE)
  set(MODULE_LIBRARIES ${CoreMIDI} ${CoreFoundation} ${CoreAudio})
elseif(UNIX)
  find_package(ALSA)
  set(MODULE_INCLUDES ${ALSA_INCLUDE_DIRS})
  set(MODULE_LIBRARIES ${ALSA_LIBRARIES})
endif()

set(MODULE_INCLUDES ${MODULE_INCLUDES} PARENT_SCOPE)
set(MODULE_LIBRARIES ${MODULE_LIBRARIES} PARENT_SCOPE)