FILE(GLOB FOLDER_SOURCES *.c*)
FILE(GLOB FOLDER_HEADERS *.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(LIB_NAME "AntTweakBar")

SET(CMAKE_CXX_FLAGS "-Wall -fPIC -fno-strict-aliasing -D__PLACEMENT_NEW_INLINE")

if(APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++")
    ADD_DEFINITIONS("-D_MACOSX")

elseif(UNIX)
    ADD_DEFINITIONS("-D_UNIX")
#SET(FOLDER_HEADERS "${FOLDER_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/res/TwXCursors.h")
endif(APPLE)

add_library(${LIB_NAME} STATIC ${FOLDER_SOURCES} ${FOLDER_HEADERS})

SET(LIBS ${LIBS} ${LIB_NAME})

if(APPLE)
  TARGET_LINK_LIBRARIES(${LIB_NAME} "-framework OpenGL -framework AppKit")
elseif(UNIX)
  TARGET_LINK_LIBRARIES(${LIB_NAME} "X11")
endif(APPLE)

SOURCE_GROUP("Headers" FILES ${FOLDER_HEADERS})
SOURCE_GROUP("Sources" FILES ${FOLDER_SOURCES})

install (TARGETS ${LIB_NAME} DESTINATION lib)    

