##### ASSIMP
find_package(ASSIMP REQUIRED)
INCLUDE_DIRECTORIES(${ASSIMP_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ASSIMP_LIBRARIES})
    
find_package(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ZLIB_LIBRARIES})

find_package(BULLET REQUIRED)
INCLUDE_DIRECTORIES(${BULLET_INCLUDE_DIRS})
set(LIBS ${LIBS} ${BULLET_LIBRARIES})

##### OPENNI
if(WIN32)
    SET(OPENNI_INCLUDE_DIRS "")
    SET(OPENNI_LIB_DIR "")
    SET(OPENNI_LIBRARIES "OpenNI64")
else(WIN32)
    SET(OPENNI_INCLUDE_DIRS "/usr/include/ni")
    SET(OPENNI_LIB_DIR "/usr/lib")
    SET(OPENNI_LIBRARIES "OpenNI")
endif(WIN32)

INCLUDE_DIRECTORIES(${OPENNI_INCLUDE_DIRS})
LINK_DIRECTORIES(${OPENNI_LIB_DIR})
#set(LIBS ${LIBS} ${OPENNI_LIBRARIES})

addSample(${itemName} ${folderItem})
