##### ASSIMP
find_package(ASSIMP REQUIRED)
INCLUDE_DIRECTORIES(${ASSIMP_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ASSIMP_LIBRARIES})
    
find_package(BULLET REQUIRED)
INCLUDE_DIRECTORIES(${BULLET_INCLUDE_DIRS})
set(LIBS ${LIBS} ${BULLET_LIBRARIES})

find_package(FMOD REQUIRED)
INCLUDE_DIRECTORIES(${FMOD_INCLUDE_DIRS})
set(LIBS ${LIBS} ${FMOD_LIBRARIES})

addSample(${itemName} ${folderItem})
