##### ASSIMP
find_package(ASSIMP REQUIRED)
INCLUDE_DIRECTORIES(${ASSIMP_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ASSIMP_LIBRARIES})
    
find_package(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ZLIB_LIBRARIES})

find_package(BULLET REQUIRED)
INCLUDE_DIRECTORIES(${BULLET_INCLUDE_DIRS})
set(LIBS ${LIBS} ${BULLET_LIBRARIES})

addSample(${itemName} ${folderItem})
