##### ASSIMP
find_package(ASSIMP REQUIRED)
INCLUDE_DIRECTORIES(${ASSIMP_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ASSIMP_LIBRARIES})
    
find_package(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
set(LIBS ${LIBS} ${ZLIB_LIBRARIES})

KINSKI_ADD_MODULE("assimp" ASSIMP_FILES)
SET(MODULE_FILES ${ASSIMP_FILES})

KINSKI_ADD_SAMPLE(${itemName} ${folderItem} "${MODULE_FILES}")
